CB-18881 Expose UMS short timeout

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -111,6 +111,7 @@
             - "CLUSTERPROXY_URL={{{get . "CLUSTER_PROXY_URL"}}}"
             - ALTUS_MINASSHDMGMT_HOST={{{get . "ALTUS_TUNNEL_MANAGEMENT_HOST"}}}
             - ALTUS_MINASSHDMGMT_PORT={{{get . "ALTUS_TUNNEL_MANAGEMENT_PORT"}}}
+            - ALTUS_UMS_CLIENT_GRPC_SHORT_TIMEOUT_SEC={{{get . "ALTUS_UMS_CLIENT_GRPC_SHORT_TIMEOUT_SEC"}}}
             - STATUSCHECKER_ENABLED={{{get . "CB_STATUSCHECKER_ENABLED"}}}
             - CLUSTERDNS_HOST
         labels:
