--- a/templates/compose-periscope.tmpl
+++ b/templates/compose-periscope.tmpl
@@ -40,6 +40,7 @@
             - ALTUS_AUDIT_ENDPOINT
             - MOCK_INFRASTRUCTURE_HOST
             - OPENTRACING_JAEGER_UDP-SENDER_HOST={{{get . "JAEGER_HOST"}}}
+            - ALTUS_UMS_CLIENT_GRPC_SHORT_TIMEOUT_SEC={{{get . "ALTUS_UMS_CLIENT_GRPC_SHORT_TIMEOUT_SEC"}}}
         labels:
         - traefik.port=8080
         - traefik.frontend.rule=PathPrefix:/as/
