CB-19063 Improve UMS configuration in CB and CBD

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -95,6 +95,7 @@
             - "CB_CONSUMPTION_ENABLED={{{get . "CONSUMPTION_ENABLED"}}}"
             - "CB_SDX_URL={{{get . "DATALAKE_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "ALTUS_UMS_PORT={{{get . "UMS_PORT"}}}"
             - "SAAS_SERVICEDISCOVERY_HOST={{{get . "SAAS_SERVICEDISCOVERY_HOST"}}}"
             - "SAAS_SERVICEDISCOVERY_PORT={{{get . "SAAS_SERVICEDISCOVERY_PORT"}}}"
             - "SAAS_SDX_HOST={{{get . "SAAS_SDX_HOST"}}}"
