--- a/templates/compose-redbeams.tmpl
+++ b/templates/compose-redbeams.tmpl
@@ -36,6 +36,7 @@
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
             - "CAAS_URL={{{get . "THUNDERHEAD_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "ALTUS_UMS_PORT={{{get . "UMS_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
             - MOCK_INFRASTRUCTURE_HOST
             - "NOTIFICATION_URLS={{{get . "CB_DEFAULT_SUBSCRIPTION_ADDRESS"}}}"
