--- a/templates/compose-consumption.tmpl
+++ b/templates/compose-consumption.tmpl
@@ -30,6 +30,7 @@
             - VAULT_PORT={{{get . "VAULT_BIND_PORT"}}}
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "ALTUS_UMS_PORT={{{get . "UMS_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
             - ALTUS_UMS_CLIENT_GRPC_SHORT_TIMEOUT_SEC={{{get . "ALTUS_UMS_CLIENT_GRPC_SHORT_TIMEOUT_SEC"}}}
             - MOCK_INFRASTRUCTURE_HOST
