--- a/templates/compose-environment.tmpl
+++ b/templates/compose-environment.tmpl
@@ -39,6 +39,7 @@
             - VAULT_ROOT_TOKEN={{{get . "VAULT_ROOT_TOKEN"}}}
             - "CAAS_URL={{{get . "THUNDERHEAD_URL"}}}"
             - "ALTUS_UMS_HOST={{{get . "UMS_HOST"}}}"
+            - "ALTUS_UMS_PORT={{{get . "UMS_PORT"}}}"
             - "SAAS_SDX_HOST={{{get . "SAAS_SDX_HOST"}}}"
             - "SAAS_SDX_PORT={{{get . "SAAS_SDX_PORT"}}}"
             - ALTUS_AUDIT_ENDPOINT
