CDPSDX-3827: Added Cloudbreak host/port info to DR service.

--- a/templates/compose-datalake-dr.tmpl
+++ b/templates/compose-datalake-dr.tmpl
@@ -13,6 +13,8 @@
             - "SERVICEDEPENDENCIES_CLUSTERPROXYPORT={{{get . "CLUSTER_PROXY_PORT"}}}"
             - "SERVICEDEPENDENCIES_AUDITHOST={{{get . "UMS_HOST"}}}"
             - "SERVICEDEPENDENCIES_AUDITPORT={{{get . "UMS_PORT"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKHOST={{{get . "CLOUDBREAK_HOST"}}}"
+            - "SERVICEDEPENDENCIES_CLOUDBREAKPORT={{{get . "CB_PORT"}}}"
             - DB_HOST={{{get . "COMMON_DB"}}}
             - DB_NAME={{{get . "DATALAKE_DR_DB_ENV_DB"}}}
             - DB_USERNAME={{{get . "DATALAKE_DR_DB_ENV_USER"}}}
