Revert "CB-20111 Remove Jaeger container from cbd"
This reverts commit 8543c08dbc89d7f738b4099a999b2471976771be.

--- a/templates/compose-cloudbreak.tmpl
+++ b/templates/compose-cloudbreak.tmpl
@@ -107,6 +107,7 @@
             - "CB_SHOW_TERMINATED_CLUSTERS_HOURS={{{get . "CB_SHOW_TERMINATED_CLUSTERS_HOURS"}}}"
             - "CB_SHOW_TERMINATED_CLUSTERS_MINUTES={{{get . "CB_SHOW_TERMINATED_CLUSTERS_MINUTES"}}}"
             - "NOTIFICATION_URLS={{{get . "CB_DEFAULT_SUBSCRIPTION_ADDRESS"}}}"
+            - OPENTRACING_JAEGER_UDP-SENDER_HOST={{{get . "JAEGER_HOST"}}}
             - CLUSTERPROXY_ENABLED
             - "CLUSTERPROXY_URL={{{get . "CLUSTER_PROXY_URL"}}}"
             - ALTUS_MINASSHDMGMT_HOST={{{get . "ALTUS_TUNNEL_MANAGEMENT_HOST"}}}
